package com.girlify.dolarapp.dolar.ui.dollar.model

class DollarModel (
    val name: String,
    val buy: String,
    val sell: String,
    val variation: String,
    val class_variation: String,
)
